--- a/octoprint_discordremote/templates/discordremote_settings.jinja2
+++ b/octoprint_discordremote/templates/discordremote_settings.jinja2
@@ -158,7 +158,7 @@
                               data-bind="value: $parent.settings.plugins.discordremote.events[$data].message"></textarea>
                 </div>
             </div>
-            <div class="control-group" data-bind="ifnot: $parent.settings.plugins.discordremote.events[$data].name = 'Timelapse Completed'">
+            <div class="control-group" data-bind="ifnot: $parent.settings.plugins.discordremote.events[$data].timelapse_complete">
                 <label class="control-label">{{ _("Include snapshot") }}</label>
                 <div class="controls">
                     <input type="checkbox"
@@ -194,8 +194,8 @@
                 </div>
             </div>
             <!-- Special Case for Timelapse Completed -->
-            <div class="control-group" data-bind="if: $parent.settings.plugins.discordremote.events[$data].name = 'Timelapse Completed'">
-                <small>{{ _("Address defaults to Internal IP, and will change to the hostname if the setting 'Only use Hostname' is enabled.") }}
+            <div class="control-group" data-bind="if: $parent.settings.plugins.discordremote.events[$data].timelapse_complete">
+                <small>{{ _("Address defaults to Internal IP, and will change to the hostname if the setting 'Only use Hostname' is enabled. '{how_to_access}' will be auto expanded with how to either post it to the Discord channel or give a link to download directly, all dependent on the reported size of the timelapse.") }}
             </small>
             </div>
         </div>
